@@ -40,7 +40,7 @@ public class RolleoversiktController {
     @GetMapping
     public ResponseEntity<RsRolleoversikt> hentRolleoversikt(@NotNull @RequestHeader(name = "Nav-Personident") String ident) {
         var grunndata = service.hentRolleoversiktV2(ident)
-                .orElseThrow(() -> new NotFoundException(String.format("Kunne ikke finne person med fnr:%s", ident)));
+                .orElseThrow(() -> new NotFoundException("Kunne ikke finne person med fnr:%s".formatted(ident)));
         return ResponseEntity.status(HttpStatus.OK).body(grunndata);
     }
 
