@@ -1,11 +1,11 @@
 package no.nav.registre.testnav.inntektsmeldingservice.service;
 
-import io.swagger.v3.core.util.Json;
 import jakarta.validation.ValidationException;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import no.nav.registre.testnav.inntektsmeldingservice.consumer.DokmotConsumer;
 import no.nav.registre.testnav.inntektsmeldingservice.consumer.GenererInntektsmeldingConsumer;
+import no.nav.registre.testnav.inntektsmeldingservice.controller.InntektsmeldingRequest;
 import no.nav.registre.testnav.inntektsmeldingservice.factories.RsAltinnInntektsmeldingFactory;
 import no.nav.registre.testnav.inntektsmeldingservice.factories.RsJoarkMetadataFactory;
 import no.nav.registre.testnav.inntektsmeldingservice.repository.InntektsmeldingRepository;
@@ -13,13 +13,11 @@ import no.nav.registre.testnav.inntektsmeldingservice.repository.model.Inntektsm
 import no.nav.testnav.libs.dto.dokarkiv.v1.InntektDokument;
 import no.nav.testnav.libs.dto.dokarkiv.v1.ProsessertInntektDokument;
 import no.nav.testnav.libs.dto.inntektsmeldinggeneratorservice.v1.RsInntektsmeldingRequest;
-import no.nav.testnav.libs.dto.inntektsmeldingservice.v1.requests.InntektsmeldingRequest;
 import org.springframework.stereotype.Service;
 
 import java.time.ZoneId;
 import java.util.Date;
 import java.util.List;
-import java.util.stream.Collectors;
 
 import static java.util.Objects.nonNull;
 
@@ -36,13 +34,12 @@ public class InntektsmeldingService {
             String navCallId,
             InntektsmeldingRequest request
     ) {
-
-        List<InntektDokument> dokumentListe = request.getInntekter()
+        var dokumentListe = request
+                .inntekter()
                 .stream()
-                .map(melding -> lagInntektDokument(melding, request.getArbeidstakerFnr()))
-                .collect(Collectors.toList());
-
-        return dokmotConsumer.opprettJournalpost(request.getMiljoe(), dokumentListe, navCallId);
+                .map(melding -> lagInntektDokument(melding, request.arbeidstakerFnr()))
+                .toList();
+        return dokmotConsumer.opprettJournalpost(request.miljoe(), dokumentListe, navCallId);
     }
 
     private InntektDokument lagInntektDokument(
@@ -50,11 +47,10 @@ public class InntektsmeldingService {
             String ident
     ) {
         var xmlString = genererInntektsmeldingConsumer.getInntektsmeldingXml201812(RsAltinnInntektsmeldingFactory.create(rsInntektsmelding, ident));
-        log.trace(xmlString);
-        InntektsmeldingModel model = repository.save(new InntektsmeldingModel());
-        log.info("Inntektsmelding generert med id: {}.\n{}", model.getId(), Json.pretty(xmlString));
-
-        return InntektDokument.builder()
+        var model = repository.save(new InntektsmeldingModel());
+        log.info("Inntektsmelding generert med id: {}.\n{}", model.getId(), xmlString);
+        return InntektDokument
+                .builder()
                 .arbeidstakerFnr(ident)
                 .datoMottatt(Date.from(rsInntektsmelding.getAvsendersystem().getInnsendingstidspunkt().atZone(ZoneId.systemDefault()).toInstant()))
                 .virksomhetsnavn(getVirksomhetsnavn(rsInntektsmelding))
@@ -71,7 +67,6 @@ public class InntektsmeldingService {
         if (nonNull(inntekt.getArbeidsgiverPrivat())) {
             return inntekt.getArbeidsgiverPrivat().getKontaktinformasjon().getKontaktinformasjonNavn();
         }
-
         throw new ValidationException("Ingen arbeidsgiver med kontaktinformasjon oppgitt. Avbryter.");
     }
 
@@ -79,11 +74,9 @@ public class InntektsmeldingService {
         if (nonNull(inntekt.getArbeidsgiver())) {
             return inntekt.getArbeidsgiver().getVirksomhetsnummer();
         }
-
         if (nonNull(inntekt.getArbeidsgiverPrivat())) {
             return inntekt.getArbeidsgiverPrivat().getArbeidsgiverFnr();
         }
-
         throw new ValidationException("Virksomhetsnummer for arbeidsgiver ikke oppgitt. Avbryter.");
     }
 }
