@@ -1,7 +1,6 @@
 package no.nav.testnav.apps.tpsmessagingservice.consumer.command;
 
 import com.ibm.mq.jakarta.jms.MQQueue;
-import com.ibm.mq.jmqi.JmqiException;
 import com.ibm.msg.client.jakarta.wmq.compat.jms.internal.JMSC;
 import jakarta.jms.Connection;
 import jakarta.jms.ConnectionFactory;
@@ -33,7 +32,7 @@ public class TpsMeldingCommand implements Callable<String> {
     private final String password;
     private final String requestMessageContent;
 
-    public String call() throws JMSException, JmqiException {
+    public String call() throws JMSException {
 
         try (Connection connection = connectionFactory.createConnection(username, password)) {
             connection.start();
@@ -63,14 +62,14 @@ public class TpsMeldingCommand implements Callable<String> {
                         producer.send(requestMessage);
                     }
                 } catch (JMSException e) {
-                    log.warn(String.format("%s: %s", FEIL_KOENAVN, e.getMessage()), e);
+                    log.warn("%s: %s".formatted(FEIL_KOENAVN, e.getMessage()), e);
                     return e.getMessage();
                 }
 
                 TextMessage responseMessage;
 
                 /* Wait for response */
-                String attributes = String.format("JMSCorrelationID='%s'", requestMessage.getJMSMessageID());
+                String attributes = "JMSCorrelationID='%s'".formatted(requestMessage.getJMSMessageID());
 
                 try (MessageConsumer consumer = session.createConsumer(responseDestination, attributes)) {
 
