@@ -30,7 +30,7 @@ public class DevConfig extends AbstractVaultConfiguration {
         }
         var token = System.getProperty(VAULT_PROPERTY);
         if (isBlank(token)) {
-            throw new IllegalArgumentException(String.format("Påkrevet property '%s' er ikke satt.", VAULT_PROPERTY));
+            throw new IllegalArgumentException("Påkrevet property '%s' er ikke satt.".formatted(VAULT_PROPERTY));
         }
         return new TokenAuthentication(System.getProperty(VAULT_PROPERTY));
     }
